--- a/packages/udesign-ui/src/components/empty/empty.scss
+++ b/packages/udesign-ui/src/components/empty/empty.scss
@@ -2,7 +2,6 @@
 $module: ud-empty;
 
 .#{$module} {
-  background: $empty-background;
   border-radius: $empty-border-radius;
   padding: $empty-padding;
   text-align: center;
