--- a/packages/udesign-ui/src/components/empty/variables.scss
+++ b/packages/udesign-ui/src/components/empty/variables.scss
@@ -1,4 +1,3 @@
-$empty-background: var(--ud-empty-background, var(--ud-color-primary-light)); // 默认态背景色
 $empty-font-size: var(--empty-font-size, 20px); // 文字字号
 $empty-padding: var(--empty-padding, 64px 0 44px); // 内边距
 $empty-border-radius: var(--ud-empty-border-radius, 6px); // 开关圆角-默认
